# mmmotivator

./: CLAUDE.md  TASKS.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.claude/agent-memory/paranoid-security-reviewer/: MEMORY.md
.claude/agent-memory/react-code-reviewer/: MEMORY.md
.claude/agents/: paranoid-security-reviewer.md  react-code-reviewer.md
.github/workflows/: ci.yml
ai/: .gitignore  ARCHITECTURE.md  CLAUDE.md  COSTS.md  README.md  compose.yaml  env_llm.example  env_ollama.example  generate-keys.sh
ai/api/: Dockerfile  main.py  pyproject.toml
ai/api/tests/: conftest.py  test_quota.py
e2e/: visual.spec.ts
src/: App.tsx  colors.ts  config.ts  grid.ts  index.css  main.tsx  sharing.ts  storage.ts  types.ts
src/__tests__/: App.test.tsx  DatenschutzPage.test.tsx  ImpressumPage.test.tsx  Legend.test.tsx  SiteFooter.test.tsx  WeekGrid.test.tsx  colors.test.ts  grid.test.ts  meta-tags.test.ts  sharing.test.ts  storage.test.ts  vercel-config.test.ts  vercel-integrations.test.tsx
src/components/: ConfigForm.tsx  DateForm.tsx  Legend.tsx  SiteFooter.tsx  WeekGrid.tsx
src/pages/: DatenschutzPage.tsx  ImpressumPage.tsx
